@startuml MarketMaster Analysis Class Diagram
skinparam classAttributeIconSize 0
skinparam linetype ortho
left to right direction

class User {
  username
  email
  role
}

class Portfolio {
  virtualCashBalance
}

class Asset {
  symbol
  name
  type
}

class Transaction {
  type
  quantity
  price
  timestamp
}

class Course {
  title
  description
  difficultyLevel
}

class Achievement {
  name
  description
  type
}

class Game {
  title
  description
  startDate
  endDate
  status
}

class InsuranceProduct {
  name
  description
  type
}

class Watchlist {
}

User "1" -- "*" Portfolio
User "1" -- "*" Watchlist
User "1" -- "*" Achievement
User "1" -- "*" Course
User "1" -- "*" Game
User "1" -- "*" InsuranceProduct

Portfolio "1" -- "*" Asset
Portfolio "1" -- "*" Transaction

Asset "1" -- "*" Transaction
Asset "1" -- "*" Watchlist

Game "1" -- "*" Portfolio
Game "1" -- "*" Transaction

User -[hidden]right- Portfolio
Portfolio -[hidden]right- Asset
Asset -[hidden]right- Transaction

User -[hidden]down- Course
Course -[hidden]down- Achievement
Achievement -[hidden]down- Game
Game -[hidden]down- InsuranceProduct

Watchlist -[hidden]down- Asset

@enduml